fix: padding on mobile

--- a/resources/tailwind.css
+++ b/resources/tailwind.css
@@ -660,16 +660,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 2rem;
 }
 
-.p-16 {
-  padding: 4rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-8 {
@@ -832,6 +828,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .main-desktop\:bg-neutral-100 {
     --tw-bg-opacity: 1;
     background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+  }
+
+  .main-desktop\:p-16 {
+    padding: 4rem;
   }
 
   @media (prefers-color-scheme: dark) {
